Moved repository objects to repository package (#6)