@@ -1,17 +1,19 @@
 package com.project.hotelBooking.service;
 
-import com.project.hotelBooking.domain.Hotel;
-import com.project.hotelBooking.domain.HotelDto;
-import com.project.hotelBooking.domain.Localization;
-import com.project.hotelBooking.mapper.HotelMapper;
-import com.project.hotelBooking.repository.*;
+import com.project.hotelBooking.controller.exceptions.ElementNotFoundException;
+import com.project.hotelBooking.repository.HotelRepository;
+import com.project.hotelBooking.repository.LocalizationRepository;
+import com.project.hotelBooking.service.mapper.HotelMapperServ;
+import com.project.hotelBooking.service.mapper.LocalizationMapperServ;
+import com.project.hotelBooking.service.model.HotelServ;
+import com.project.hotelBooking.service.model.LocalizationServ;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,37 +22,58 @@ public class LocalizationService {
 
     private final LocalizationRepository localizationRepository;
     private final HotelRepository hotelRepository;
-    private final HotelMapper hotelMapper;
+    private final LocalizationMapperServ localizationMapperServ;
+    private final HotelMapperServ hotelMapperServ;
     private static final int PAGE_SIZE=5;
 
-    public Optional<Localization> getLocalizationByCityAndCountry(Localization localization) { return localizationRepository.findLocalizationByCityAndCountry(
-            localization.getCity(), localization.getCountry());}
-    public Localization saveLocalization(Localization localization) {
-        return localizationRepository.save(localization);
+    public LocalizationServ getLocalizationByCityAndCountry(LocalizationServ localization) {
+        return localizationMapperServ.mapToLocalization(localizationRepository.findLocalizationByCityAndCountry(
+            localization.getCity(), localization.getCountry()).orElseThrow(
+                ()->new ElementNotFoundException("No such localization"))
+        );
     }
-    public Optional<Localization> getLocalizationById(Long id) {
-        return localizationRepository.findById(id);
+    public LocalizationServ saveLocalization(LocalizationServ localization) {
+        return localizationMapperServ.mapToLocalization(
+                localizationRepository.save(localizationMapperServ.mapToRepositoryLocalization(localization))
+        );
+    }
+    public LocalizationServ getLocalizationById(Long id) {
+        return localizationMapperServ.mapToLocalization(
+                localizationRepository.findById(id).orElseThrow(
+                        () -> new ElementNotFoundException("No such localization"))
+        );
     }
     public void deleteLocalizationById(Long id) {
         localizationRepository.deleteById(id);
     }
-    public List<Localization> getLocalizations(Integer page, Sort.Direction sort) {
-        return localizationRepository.findAllLocalizations(PageRequest.of(page, PAGE_SIZE, Sort.by(sort, "id")));
+    public List<LocalizationServ> getLocalizations(Integer page, Sort.Direction sort) {
+        return localizationMapperServ.mapToLocalizations(
+                localizationRepository.findAllLocalizations(PageRequest.of(page, PAGE_SIZE, Sort.by(sort, "id")))
+        );
     }
-    public List<Localization> getLocalizationsWithHotels(Integer page, Sort.Direction sort) {
-        List<Localization> localizations =  localizationRepository.findAllLocalizations(PageRequest.of(page, PAGE_SIZE, Sort.by(sort, "id")));
-        List<Long> ids = localizations.stream().map(Localization::getId).collect(Collectors.toList());
-        List<HotelDto> hotelDtos = hotelRepository.findAllByLocalizationIdIn(ids).stream().map(hotel -> hotelMapper.mapToHotelDto(hotel)).toList();
-        List<Hotel> hotels =hotelDtos.stream().map(hotelDto -> hotelMapper.mapToHotel(hotelDto)).collect(Collectors.toList());
-        localizations.forEach(localization -> localization.setHotels(extractHotels(hotels, localization.getId())));
+    public List<LocalizationServ> getLocalizationsWithHotels(Integer page, Sort.Direction sort) {
+        List<LocalizationServ> localizations =  localizationMapperServ.mapToLocalizations(
+                localizationRepository.findAllLocalizations(PageRequest.of(page, PAGE_SIZE, Sort.by(sort, "id")))
+        );
+        List<Long> localizationIds = localizations.stream()
+                .map(LocalizationServ::getId)
+                .collect(Collectors.toList());
+        List<HotelServ> hotels = hotelMapperServ.mapToHotels(
+                hotelRepository.findAllByLocalizationIdIn(localizationIds).stream().toList()
+        );
+        localizations.forEach(localization -> localization.withHotels(extractHotels(hotels, localization.getId())));
         return localizations;
     }
-    private List<Hotel> extractHotels(List<Hotel> hotels, Long id) {
+
+    private List<HotelServ> extractHotels(List<HotelServ> hotels, Long id) {
         return hotels.stream()
-                .filter(hotel -> hotel.getLocalizationId()==id).collect(Collectors.toList());
+                .filter(hotel -> Objects.equals(hotel.getLocalizationId(), id))
+                .collect(Collectors.toList());
     }
-    public Localization editLocalization(Localization localization) {
-        return localizationRepository.save(localization);
+    public LocalizationServ editLocalization(LocalizationServ localization) {
+        return localizationMapperServ.mapToLocalization(
+                localizationRepository.save(localizationMapperServ.mapToRepositoryLocalization(localization))
+        );
     }
     public void deleteAllLocalizations() {
         localizationRepository.deleteAll();
